--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
         <img class="pic" src="images/illustration-dashboard.png" alt="illustration-dashboard">
       </section>
       <section id="social-media">
+        <ul class="list">
         <li><i class="fa-brands fa-facebook-f social-icon social-icon-fb"></i></li>
         <li><i class="fa-brands fa-twitter   social-icon social-icon-twtr"></i></li> 
         <li><i class="fa-brands fa-instagram social-icon social-icon-insta"></i></li>         
+       </ul>    
       </section>
       <footer>
         &copy; Copyright Ping. All rights reserved. 
