--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <h1 class="title">We are launching <span class="soon">soon!</span></h1>
         <p class="subscribe">Subscribe and get notified</p>
       </header>
-      <section id="searchbox">
-        <form class="search" action="#" novalidate="true">
+      <div id="searchbox">
+        <form class="search" action="#">
           <div class="field">
-          <input class="mail" size="40"; id="e-mail" type="text" name="email" placeholder="Your email address...">
+          <input class="mail" size="40"  type="text" name="email" placeholder="Your email address...">
           <p class="error-txt">Test</p>
           <p class="correct"></p>
           </div>
@@ -36,18 +36,18 @@
         </form>
         
   
-      </section>
+      </div>
       
-      <section id="chart">
+      <div id="chart">
         <img class="pic" src="images/illustration-dashboard.png" alt="illustration-dashboard">
-      </section>
-      <section id="social-media">
+      </div>
+      <div id="social-media">
         <ul class="list">
         <li><i class="fa-brands fa-facebook-f social-icon social-icon-fb"></i></li>
         <li><i class="fa-brands fa-twitter   social-icon social-icon-twtr"></i></li> 
         <li><i class="fa-brands fa-instagram social-icon social-icon-insta"></i></li>         
        </ul>    
-      </section>
+      </div>
       <footer>
         &copy; Copyright Ping. All rights reserved. 
       </footer>
