--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="description" content="Ping coming soon page">
+  <meta name="keywords" content="Frontend Mentor, Ping coming soon page, _nehal, Responsive Designs">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
@@ -13,7 +15,7 @@
   <link rel="stylesheet" href="css/styles.css">
 
 
-  <title>Frontend Mentor | Ping coming soon page</title>
+  <title>Ping coming soon page</title>
 
   
 </head>
